src/libqcolumnview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QColumnView QColumnView;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
QColumnView* QColumnView_new(QWidget* parent);
QColumnView* QColumnView_new2();
QMetaObject* QColumnView_MetaObject(const QColumnView* self);
void* QColumnView_Metacast(QColumnView* self, const char* param1);
int QColumnView_Metacall(QColumnView* self, int param1, int param2, void** param3);
libqt_string QColumnView_Tr(const char* s);
void QColumnView_UpdatePreviewWidget(QColumnView* self, QModelIndex* index);
QModelIndex* QColumnView_IndexAt(const QColumnView* self, QPoint* point);
void QColumnView_ScrollTo(QColumnView* self, QModelIndex* index, int hint);
QSize* QColumnView_SizeHint(const QColumnView* self);
QRect* QColumnView_VisualRect(const QColumnView* self, QModelIndex* index);
void QColumnView_SetModel(QColumnView* self, QAbstractItemModel* model);
void QColumnView_SetSelectionModel(QColumnView* self, QItemSelectionModel* selectionModel);
void QColumnView_SetRootIndex(QColumnView* self, QModelIndex* index);
void QColumnView_SelectAll(QColumnView* self);
void QColumnView_SetResizeGripsVisible(QColumnView* self, bool visible);
bool QColumnView_ResizeGripsVisible(const QColumnView* self);
QWidget* QColumnView_PreviewWidget(const QColumnView* self);
void QColumnView_SetPreviewWidget(QColumnView* self, QWidget* widget);
void QColumnView_SetColumnWidths(QColumnView* self, libqt_list /* of int */ list);
libqt_list /* of int */ QColumnView_ColumnWidths(const QColumnView* self);
bool QColumnView_IsIndexHidden(const QColumnView* self, QModelIndex* index);
QModelIndex* QColumnView_MoveCursor(QColumnView* self, int cursorAction, int modifiers);
void QColumnView_ResizeEvent(QColumnView* self, QResizeEvent* event);
void QColumnView_SetSelection(QColumnView* self, QRect* rect, int command);
QRegion* QColumnView_VisualRegionForSelection(const QColumnView* self, QItemSelection* selection);
int QColumnView_HorizontalOffset(const QColumnView* self);
int QColumnView_VerticalOffset(const QColumnView* self);
void QColumnView_RowsInserted(QColumnView* self, QModelIndex* parent, int start, int end);
void QColumnView_CurrentChanged(QColumnView* self, QModelIndex* current, QModelIndex* previous);
void QColumnView_ScrollContentsBy(QColumnView* self, int dx, int dy);
QAbstractItemView* QColumnView_CreateColumn(QColumnView* self, QModelIndex* rootIndex);
libqt_string QColumnView_Tr2(const char* s, const char* c);
libqt_string QColumnView_Tr3(const char* s, const char* c, int n);
void QColumnView_InitializeColumn(const QColumnView* self, QAbstractItemView* column);